Fixed: HWPI slideshow style 16:9 overlay - zindex is invisibly covering content below it. #3031

--- a/openscholar/themes/hwpi_basetheme/css/slideshow.css
+++ b/openscholar/themes/hwpi_basetheme/css/slideshow.css
@@ -213,7 +213,6 @@ a.rslides_nav.prev {
 }
 
 #layout_16_9_overlay .hero {
-    min-height: 430px;
     padding: 0 !important;
     z-index: 1;
 }	
